--- a/src/register.html
+++ b/src/register.html
@@ -11,10 +11,7 @@
 
 <body>
     <a href="" id="logo">QQ</a>
-    <div id="left" style="background: url(https://4.url.cn/zc/v3/img/01-1.jpg)">
-        <!-- https://4.url.cn/zc/v3/img/01-3.jpg
-        https://4.url.cn/zc/v3/img/01-4.jpg -->
-    </div>
+    <div id="left" ></div>
     <div id="top">
         <div class="list feedback">
             <a href="javascript:void(0)" class="text">意见反馈</a>
@@ -136,6 +133,7 @@
             </div>
         </div>
     </div>
+    <script src="script/register.js" type="module"></script>
 </body>
 
 </html>
