--- a/src/shouye.html
+++ b/src/shouye.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="font/iconfont.css">
 </head>
 
-<body style="background:#f5f5f5">
+<body style="background:#f5f5f5;">
     <div id="header">
         <div class="headertop">
             <div class="topmain">
@@ -20,14 +20,14 @@
                 <img src="https://js01.daoju.qq.com/zb/common/images/ico-comm5.png" alt="" class="qqmall">
                 <div class="cart">
                     <span class="iconfont icon-gouwuche"></span>
-                    <a href="" class="text">购物车</a>
+                    <a href="cart.html" class="text" target="_blank">购物车</a>
                 </div>
                 <div class="login">
                     <span class="iconfont icon-yonghu"></span>
-                    <a href="" class="text">立即登录</a>
+                    <a href="javascript:;" class="text">立即登录</a>
                 </div>
                 <div class="search">
-                    <a href="" class="iconfont icon-sousuo"></a>
+                    <a href="javascript:;" class="iconfont icon-sousuo"></a>
                     <input type="text" placeholder="请输入想要找的宝贝">
                 </div>
             </div>
@@ -35,87 +35,87 @@
         <div class="headerbottom">
             <div class="bottommain">
                 <ul class="headerbottom-left">
-                    <li><a href="sass练习.html">首页</a></li>
+                    <li><a href="shouye.html">首页</a></li>
                     <li><a href="https://mall.qq.com/act/a20190516cf/index.html">枪模主题站</a></li>
                     <li><a href="https://mall.qq.com/cf/productlist.shtml?catid=154">包类专区</a></li>
                     <li><a href="https://mall.qq.com/cf/productlist.shtml?catid=151">数码外设</a></li>
                     <li><a href="https://mall.qq.com/cf/productlist.shtml?catid=152">家居日用</a></li>
                     <li><a href="https://mall.qq.com/cf/productlist.shtml?catid=168">模型手办</a></li>
                 </ul>
-                <a href="" class="all">
+                <a href="javascropt:;" class="all">
                     <span>全部商品分类</span>
                     <span class="iconfont icon-xialaanniu"></span>
                 </a>
-                
+
             </div>
         </div>
-        <div class="secondnav">
+        <div class="secondnav" style="display: none;">
             <ul class="navmain">
                 <li class="list">
-                    <a href="" class="title">
+                    <a href="javascript:;" class="title">
                         <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201810/20181009144950_33369.png"
-                            alt="">
-                        <p>家居日用</p>
+                            alt="" style="padding-left: 25px;">
+                        <p>日用生活</p>
                     </a>
                     <ul>
-                        <li><a href="">背包</a></li>
-                        <li><a href="">雨伞</a></li>
-                        <li><a href="">水杯</a></li>
-                        <li><a href="">卫衣</a></li>
-                        <li><a href="">杯垫</a></li>
-                        <li><a href="">T恤</a></li>
-                        <li><a href="">饰品</a></li>
-                        <li><a href="">福袋</a></li>
-                        <li><a href="">围巾</a></li>
-                        <li><a href="">礼盒</a></li>
+                        <li><a href="javascript:;">背包</a></li>
+                        <li><a href="javascript:;">雨伞</a></li>
+                        <li><a href="javascript:;">水杯</a></li>
+                        <li><a href="javascript:;">卫衣</a></li>
+                        <li><a href="javascript:;">杯垫</a></li>
+                        <li><a href="javascript:;">T恤</a></li>
+                        <li><a href="javascript:;">饰品</a></li>
+                        <li><a href="javascript:;">福袋</a></li>
+                        <li><a href="javascript:;">围巾</a></li>
+                        <li><a href="javascript:;">礼盒</a></li>
                     </ul>
                 </li>
                 <li class="list">
-                    <a href="" class="title">
+                    <a href="javascript:;" class="title">
                         <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201810/20181009144942_72688.png"
-                            alt="图标" width="30">
+                            alt="图标" width="30" style="padding-left: 25px;">
                         <p>数码外设</p>
                     </a>
                     <ul>
-                        <li><a href="">移动电源</a></li>
-                        <li><a href="">U盘</a></li>
-                        <li><a href="">鼠标垫</a></li>
-                        <li><a href="">数据线</a></li>
-                        <li><a href="">游戏手机支</a></li>
-                        <li><a href="">架</a></li>
-                        <li><a href="">无线充电器</a></li>
-                        <li><a href="">键帽</a></li>
-                        <li><a href="">个性定制手</a></li>
-                        <li><a href="">机壳</a></li>
-                        <li><a href="">三折键盘</a></li>
+                        <li><a href="javascript:;">U盘</a></li>
+                        <li><a href="javascript:;">移动电源</a></li>
+                        <li><a href="javascript:;">鼠标垫</a></li>
+                        <li><a href="javascript:;">数据线</a></li>
+                        <li><a href="javascript:;">游戏手机支</a></li>
+                        <li><a href="javascript:;">架</a></li>
+                        <li><a href="javascript:;">无线充电器</a></li>
+                        <li><a href="javascript:;">键帽</a></li>
+                        <li><a href="javascript:;">个性定制手</a></li>
+                        <li><a href="javascript:;">机壳</a></li>
+                        <li><a href="javascript:;">三折键盘</a></li>
                     </ul>
                 </li>
                 <li class="list">
-                    <a href="" class="title">
+                    <a href="javascript:;" class="title">
                         <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201809/20180920115156_96185.png"
-                            alt="图标" width="30">
+                            alt="图标" width="30" style="padding-left: 25px;">
                         <p>个性定制</p>
                     </a>
                     <ul>
-                        <li><a href="">定制服装</a></li>
+                        <li><a href="javascript:;">定制服装</a></li>
                     </ul>
                 </li>
                 <li class="list">
-                    <a href="" class="title">
+                    <a href="javascript:;" class="title">
                         <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201810/20181009144933_93325.png"
-                            alt="图标" width="30">
+                            alt="图标" width="30" style="padding-left: 25px;">
                         <p>模型手办</p>
                     </a>
                     <ul>
-                        <li><a href="">公仔手办</a></li>
-                        <li><a href="">枪模</a></li>
-                        <li><a href="">刀锋+白狼</a></li>
-                        <li><a href="">+枪模</a></li>
+                        <li><a href="javascript:;">公仔手办</a></li>
+                        <li><a href="javascript:;">枪模</a></li>
+                        <li><a href="javascript:;">刀锋+白狼</a></li>
+                        <li><a href="javascript:;">+枪模</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
-        
+
     </div>
     <div id="body">
         <!-- 轮播图（渲染） -->
@@ -130,7 +130,7 @@
                 <div class="index-tit clearfix">
                     <h3>模型手办</h3>
                     <span>品质重现，限量发售</span>
-                    <a href="" class="fr link-more">更多</a>
+                    <a href="javascript:;" class="fr link-more">更多</a>
                 </div>
                 <div class="adbox">
 
@@ -150,9 +150,9 @@
             </div>
             <div id="blk_index_productlist_c">
                 <div class="index-tit clearfix">
-                    <h3>模型手办</h3>
-                    <span>品质重现，限量发售</span>
-                    <a href="" class="fr link-more">更多</a>
+                    <h3>个性生活</h3>
+                    <span>购好物，秀个性</span>
+                    <a href="javascript:;" class="fr link-more">更多</a>
                 </div>
                 <div class="adbox">
 
@@ -168,9 +168,9 @@
             </div>
             <div id="blk_index_productlist_d">
                 <div class="index-tit clearfix">
-                    <h3>模型手办</h3>
-                    <span>品质重现，限量发售</span>
-                    <a href="" class="fr link-more">更多</a>
+                    <h3>新颖数码</h3>
+                    <span>拥有你的专属游戏利器</span>
+                    <a href="javascript:;" class="fr link-more">更多</a>
                 </div>
                 <div class="adbox">
 
@@ -186,9 +186,9 @@
             </div>
             <div id="blk_index_productlist_e">
                 <div class="index-tit clearfix">
-                    <h3>模型手办</h3>
-                    <span>品质重现，限量发售</span>
-                    <a href="" class="fr link-more">更多</a>
+                    <h3>专属定制</h3>
+                    <span>独一无二，定制专属你的周边</span>
+                    <a href="javascript:;" class="fr link-more">更多</a>
                 </div>
                 <div class="adbox">
 
@@ -206,7 +206,7 @@
     </div>
     <div id="footer">
         <div class="main">
-            <a href="https://cf.qq.com/" class="logo">
+            <a href="https://cf.qq.com/" class="logo" target="_blank">
                 <img src="https://js01.daoju.qq.com/zb/cf/images/logo-cf-down.png" alt="">
             </a>
             <ul class="menu">
@@ -234,25 +234,25 @@
         </div>
     </div>
     <div id="mao">
-        <a href="" class="m1">
+        <a href="javascript:;" class="m1">
             <span class="iconfont icon-wenjian"></span>
             <span>我的<br>订单</span>
         </a>
-        <a href="" class="m2">
+        <a href="javascript:;" class="m2">
             <span class="iconfont icon-dizhi"></span>
             <span>我的<br>地址</span>
         </a>
-        <a href="" class="m3">
+        <a href="cart.html" class="m3" target="_blank">
             <span class="iconfont icon-gouwuche"></span>
             <span>购<br>物<br>车</span>
         </a>
-        <a href="" class="m4">
+        <a href="javascript:;" class="m4">
             <span class="iconfont icon-qq"></span>
             <span>咨询</span>
         </a>
     </div>
     <div id="totop">
-        <a href="">
+        <a href="javascript:;">
             <span class="span1">Top</span>
         </a>
     </div>
@@ -275,52 +275,91 @@
             <p><a href="//www.tencent.com/law/mo_law.shtml?/law/copyright.htm" target="_blank">腾讯公司 版权所有</a></p>
         </div>
     </div>
-    <div id="loginbox" style="display: none;">
-        <a href="javascript:void(0)" title="关闭" class="close"></a>
-        <div class="login-method">
-            <ul>
-                <li class="qq-login">
-                    <a href="javascript:void(0);">
-                        <span>QQ账号登录</span>
-                    </a>
-                </li>
-                <li class="wx-login">
-                    <a href="javascript:void(0);">
-                        <span>微信账号登录</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="remind">
-            <div>微信和QQ是两个独立账号，账号信息不互通</div>
-        </div>
-        <div class="qq">
-            <p class="title">快速安全登录</p>
-            <p class="text">
-                请使用
-                <a href="" target="_blank">QQ手机版</a>
-                扫描二维码，
-                <br>
-                或点击头像授权登录。
-            </p>
-            <img src="img/qqerweima.png" alt="" class="qqerweima">
-            <p class="checklist">
-                <a href="">帐号密码登录</a>
-                <span>|</span>
-                <a href="">注册新帐号</a>
-                <span>|</span>
-                <a href="">意见反馈</a>
-            </p>
-        </div>
-        <div class="wx" style="display: none;">
-            <p class="title">微信登录</p>
-            <div class="wx-erweima">
-                <img src="img/wxerweima.png" alt="">
-                <p>
-                    请使用微信扫描二维码登录
+    <div id="background" style="background: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;display: none;position: fixed;left: 0;top: 0;z-index: 99999;">
+        <div id="loginbox">
+            <a href="javascript:;" title="关闭" class="close"></a>
+            <div class="login-method">
+                <ul>
+                    <li class="qq-login">
+                        <a href="javascript:;">
+                            <span>QQ账号登录</span>
+                        </a>
+                    </li>
+                    <li class="wx-login">
+                        <a href="javascript:;">
+                            <span>微信账号登录</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="remind">
+                <div>微信和QQ是两个独立账号，账号信息不互通</div>
+            </div>
+            <div class="qq" style="display: block;">
+                <p class="title">快速安全登录</p>
+                <p class="text">
+                    请使用
+                    <a href="javascript:;" target="_blank">QQ手机版</a>
+                    扫描二维码，
                     <br>
-                    “聚诚品”
+                    或点击头像授权登录。
                 </p>
+                <img src="img/qqerweima.png" alt="" class="qqerweima">
+                <p class="checklist">
+                    <a href="javascript:;">帐号密码登录</a>
+                    <span>|</span>
+                    <a href="register.html" target="_blank">注册新帐号</a>
+                    <span>|</span>
+                    <a href="javascript:;">意见反馈</a>
+                </p>
+            </div>
+            <div class="wx" style="display: none;">
+                <p class="title">微信登录</p>
+                <div class="wx-erweima">
+                    <img src="img/wxerweima.png" alt="">
+                    <p>
+                        请使用微信扫描二维码登录
+                        <br>
+                        “聚诚品”
+                    </p>
+                </div>
+            </div>
+            <div class="zh" style="display: none;">
+                <div class="zhtips">
+                    <div class="zhtips-top">帐号密码登录</div>
+                    <div class="zhtips-bottom">
+                        推荐使用快速<a href="javascript:;" style="color: #3481cf;">安全登录</a>，防止盗号。
+                    </div>
+                </div>
+                <div class="login_form">
+                    <form action="" style="margin: 0;">
+                        <div class="uinArea">
+                            <label for="" class="input_tips">支持QQ号/邮箱/手机号登录</label>
+                            <div class="inputOuter">
+                                <input type="text" class="inputstyle">
+                            </div>
+                        </div>
+                        <div class="pwdArea">
+                            <label for="" class="input_password">密码</label>
+                            <div class="inputOuter">
+                                <input type="text" class="inputstyle">
+                            </div>
+                        </div>
+                        <div class="verifyArea"></div>
+                        <div class="submit">
+                            <a href="javascript:;" class="login_button">
+                                <input type="submit" value="登&nbsp;录" class="btn">
+                            </a>
+                        </div>
+                    </form>
+                </div>
+                <div class="zh-bottom">
+                    <a href="javascript:;" class="link">忘了密码？</a>
+                    <span class="dotted">|</span>
+                    <a href="register.html" class="link" target="_blank">注册新账号</a>
+                    <span class="dotted">|</span>
+                    <a href="javascript:;" class="link">意见反馈</a>
+                </div>
             </div>
         </div>
     </div>
