详情页渲染

--- a/src/details.html
+++ b/src/details.html
@@ -124,7 +124,7 @@
                 <a href="">商城首页>&nbsp;&nbsp;</a>
                 <a href="">模型手办>&nbsp; </a>
                 <a href="">枪模></a>
-                <span>M4A1-黑骑士 英雄级手办模型</span>
+                <span></span>
             </div>
             <div class="detail-main">
                 <div class="product-intro clearfix">
@@ -169,11 +169,11 @@
                         </div>
                     </div>
                     <div class="fl product-info">
-                        <h3 class="pord-name">M4A1-黑骑士 英雄级手办模型</h3>
-                        <div class="pord-tips">12月4日-18日期间购买枪模可获得游戏抽奖50代金券，请购买后前往领取中心领取，领取后将不支持退款</div>
+                        <h3 class="pord-name"></h3>
+                        <div class="pord-tips"></div>
                         <div class="pord-price clearfix">
-                            <span class="fl pord-dispri">￥<strong>298.00</strong></span>
-                            <span class="fl pord-orpri">￥298.00</span>
+                            <span class="fl pord-dispri"><strong></strong></span>
+                            <span class="fl pord-orpri"></span>
                         </div>
                         <div class="pord-saleinfo clearfix">
                             <div class="fl pord-salebox">
@@ -184,7 +184,7 @@
                         </div>
                         <div class="pord-gift clearfix">
                             <i class="gift-mark">赠品</i>
-                            <span>主题收集-黑骑士枪模,50活动代金券</span>
+                            <span></span>
                         </div>
                         <div class="pord-detailbox clearfix">
                             <div class="fl pord-sold">已售：<span>999</span></div>
@@ -198,7 +198,7 @@
                             <label class="fl">枪模</label>
                             <ul class="fl ml28">
                                 <li attrid="112" class=" current " style="overflow:hidden;">
-                                    <div class="pord-selbox">黑骑士</div>
+                                    <div class="pord-selbox"></div>
                                 </li>
                             </ul>
                         </div>
@@ -354,6 +354,7 @@
             </div>
         </div>
     </div>
+    <script src="./script/detail.js" type="module"></script>
 </body>
 
 </html>
